# permanencia

./: .env  .gitignore  Cargo.toml  diesel.toml  readme.md  setup-1.sh  setup-2.sh
migrations/2025-04-12-164616_criar_livros/: down.sql  up.sql
migrations/2025-04-28-160234_alterar_livros_adicionar_categorias/: down.sql  up.sql
src/: livros.rs  main.rs  schema.rs
